[gd_scene load_steps=19 format=3 uid="uid://dc12q557nhkvo"]

[ext_resource type="Script" uid="uid://dxpsnqfgrda5u" path="res://oree/oree.gd" id="1_qfv8v"]
[ext_resource type="Script" uid="uid://bdal6pv23b7nq" path="res://oree/hit_area.gd" id="2_hclyt"]
[ext_resource type="Script" uid="uid://dn5qkkb7uqkyn" path="res://oree/ore_state_machine.gd" id="3_nyemc"]
[ext_resource type="Script" uid="uid://bajrj8gkgmb0q" path="res://oree/ore_untouched.gd" id="4_ngldl"]
[ext_resource type="Script" uid="uid://8umhfqemw4va" path="res://oree/ore_taking_damage.gd" id="5_cyhxg"]
[ext_resource type="Script" uid="uid://daxdepv8qh41h" path="res://oree/ore_broken.gd" id="6_bnioy"]
[ext_resource type="Texture2D" uid="uid://3mjwhjk3egxw" path="res://art/ores/original/broken_stone16x.png" id="7_hclyt"]
[ext_resource type="Texture2D" uid="uid://bikcv66ukgudh" path="res://art/ores/original/diamond16x.png" id="8_vs5x5"]
[ext_resource type="Texture2D" uid="uid://7j4kshqx6q7u" path="res://art/ores/original/gold16x.png" id="9_e7h5a"]
[ext_resource type="Texture2D" uid="uid://b0r8c07q6112q" path="res://art/ores/original/iron16x.png" id="10_p8ogn"]
[ext_resource type="Texture2D" uid="uid://btrt0u710b6sr" path="res://art/ores/original/ruby16x.png" id="11_5ssy1"]
[ext_resource type="Texture2D" uid="uid://bu860lm0myw5s" path="res://art/ores/original/stone16x.png" id="12_2vwwv"]
[ext_resource type="AudioStream" uid="uid://6l6cav6ruens" path="res://art/audio/mining sound effect v2.mp3" id="13_e7h5a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nyemc"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ngldl"]
radius = 11.0

[sub_resource type="Animation" id="Animation_e7h5a"]
resource_name = "Breakign"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("../../sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(1, 0), Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(1, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3, 0.441667, 0.6, 0.766667, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.170718, 0.120407, -0.170718, 0.120407, -0.170718, 0.120407, -0.170718]
}

[sub_resource type="Animation" id="Animation_p8ogn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ssy1"]
_data = {
&"Breakign": SubResource("Animation_e7h5a"),
&"RESET": SubResource("Animation_p8ogn")
}

[node name="oree" type="Node2D"]
script = ExtResource("1_qfv8v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nyemc")

[node name="HitArea" type="Area2D" parent="."]
script = ExtResource("2_hclyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_ngldl")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("3_nyemc")

[node name="Untouched" type="Node2D" parent="StateMachine"]
script = ExtResource("4_ngldl")

[node name="TakingDamage" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("ore")]
script = ExtResource("5_cyhxg")
ore = NodePath("../..")

[node name="Broken" type="Node2D" parent="StateMachine"]
script = ExtResource("6_bnioy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../StateMachine/TakingDamage")
libraries = {
&"": SubResource("AnimationLibrary_5ssy1")
}

[node name="sprites" type="Node2D" parent="."]

[node name="broken" type="Sprite2D" parent="sprites"]
texture = ExtResource("7_hclyt")

[node name="diamond" type="Sprite2D" parent="sprites"]
texture = ExtResource("8_vs5x5")

[node name="ruby" type="Sprite2D" parent="sprites"]
texture = ExtResource("11_5ssy1")

[node name="gold" type="Sprite2D" parent="sprites"]
texture = ExtResource("9_e7h5a")

[node name="iron" type="Sprite2D" parent="sprites"]
texture = ExtResource("10_p8ogn")

[node name="stone" type="Sprite2D" parent="sprites"]
texture = ExtResource("12_2vwwv")

[node name="destroy_timer" type="Timer" parent="."]

[node name="restore_timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_e7h5a")
parameters/looping = true

[connection signal="body_entered" from="HitArea" to="HitArea" method="_on_HitArea_body_entered"]
[connection signal="body_exited" from="HitArea" to="HitArea" method="_on_HitArea_body_exited"]
